--- a/03-task/package.json
+++ b/03-task/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "d3-path": "^1.0.5",
+    "d3-scale": "^2.1.0",
+    "d3-shape": "^1.2.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
