add color picker

--- a/03-task/package.json
+++ b/03-task/package.json
@@ -24,6 +24,7 @@
     "d3-path": "^1.0.5",
     "d3-scale": "^2.1.0",
     "d3-shape": "^1.2.0",
+    "hsl-to-hex": "^1.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
