--- a/03-task/package.json
+++ b/03-task/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "d3-axis": "^1.0.8",
     "d3-ease": "^1.0.3",
     "d3-path": "^1.0.5",
     "d3-scale": "^2.1.0",
+    "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
     "d3-transition": "^1.1.1",
     "hsl-to-hex": "^1.0.0",
