--- a/03-task/package.json
+++ b/03-task/package.json
@@ -40,6 +40,9 @@
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/d3-axis": "^1.0.10",
+    "@types/d3-scale": "^2.0.1",
+    "@types/d3-shape": "^1.2.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
